GitHub is integrated to Heroku

--- a/react-ui/src/components/App.css
+++ b/react-ui/src/components/App.css
@@ -75,7 +75,7 @@ button {
 
 button.login {
   padding: 6px 6px;
-  background: #666;
+  background: #f00;
 }
 button.login:hover {
   padding: 6px 6px;
